<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    >

    <TextView
        android:id="@+id/text_alarm_common"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/new_alarm_settings_text"
        android:textSize="@dimen/tab_content_sub_title" 
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_tick_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/select_minut_tick"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            >

            <RadioButton
                android:id="@+id/tick_1_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_basic"
                android:gravity="center_vertical|right"
                android:padding="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp" 
                />
            <TextView
	            android:layout_width="0dp"
	            android:layout_weight="0.4"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical|left"
	            android:text="@string/one_minut"
            />

            <RadioButton
                android:id="@+id/tick_5_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_basic"
                android:checked="true"
                android:gravity="center_vertical|right"
                android:padding="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                />
            <TextView
	            android:layout_width="0dp"
	            android:layout_weight="0.4"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical|left"
	            android:text="@string/five_minuts"
            />

        </RadioGroup>

    </LinearLayout>

    <TextView
            android:id="@+id/text_alarm_colors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alarms_color_text"
            android:textSize="@dimen/tab_content_sub_title" 
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        >

        <TextView
            android:id="@+id/text_oneshot_color"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/one_shot_color"
            />

        <ImageView
            android:id="@+id/image_oneshot_color"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:clickable="true"
            android:scaleType="center"
            android:src="@drawable/ic_alarm_white_48dp"
            android:background="@color/background"
            android:padding="@dimen/image_border"
            android:cropToPadding="true"
            />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        >

        <TextView
            android:id="@+id/text_recurrent_color"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/recurrent_color"
            />

        <ImageView
            android:id="@+id/image_recurrent_color"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:clickable="true"
            android:scaleType="center"
            android:src="@drawable/ic_alarm_white_48dp"
            android:background="@color/background"
            android:padding="@dimen/image_border"
            android:cropToPadding="true"
            />

    </LinearLayout>

    <Button
        android:layout_marginTop="8dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_color_btn"
        android:id="@+id/reset_color_btn"
        android:layout_gravity="center_horizontal" />

</LinearLayout>